# iptv-rs

./: Cargo.toml  NOTICE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: build.yml  openwrt-snapshot.yml  release.yml
config/: iptv.toml
licenses/: Apache-2.0-retina.txt  MIT-retina.txt
openwrt/: README.md
openwrt/configs/: mediatek-filogic-snapshot.config
openwrt/iptv/: Makefile
openwrt/iptv-rs/: Makefile
openwrt/iptv-rs/files/: iptv-rs.config  iptv-rs.init
openwrt/iptv/files/: iptv.config  iptv.init
openwrt/luci-app-iptv/: Makefile
openwrt/luci-app-iptv-rs/: Makefile
openwrt/luci-app-iptv-rs/htdocs/luci-static/resources/view/iptv-rs/: config.js
openwrt/luci-app-iptv-rs/root/usr/share/luci/menu.d/: luci-app-iptv-rs.json
openwrt/luci-app-iptv-rs/root/usr/share/rpcd/acl.d/: luci-app-iptv-rs.json
openwrt/luci-app-iptv/htdocs/luci-static/resources/view/iptv/: config.js
openwrt/luci-app-iptv/root/usr/share/luci/menu.d/: luci-app-iptv.json
openwrt/luci-app-iptv/root/usr/share/rpcd/acl.d/: luci-app-iptv.json
src/: app_tests.rs  args.rs  auth.rs  config.rs  fcc.rs  iptv.rs  main.rs  playlist.rs  proxy.rs  rtsp_client.rs  shared_proxy.rs
