[package]
edition = "2024"
name = "iptv-rs"
version = "0.3.1"
license = "AGPL-3.0-only"
description = "Independent Rust IPTV proxy with native RTSP replay and multicast proxy support"

[features]
http2 = ["reqwest/http2"]
tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]

[dependencies]
actix-web = { version = "4.13", default-features = false, features = ["cookies", "macros"] }
anyhow = "1.0.102"
async-stream = "0.3"
chrono = "0.4.44"
clap = { version = "4.6", features = ["derive"] }
des = "0.9"
ecb = { version = "0.1", features = ["alloc", "block-padding"] }
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
] }
futures-core = "0.3"
futures-util = "0.3"
handlebars = "6"
hex = "0.4"
local-ip-address = "0.6"
log = "0.4"
md5 = "0.8"
rand = "0.10"
regex-lite = "0.1"
reqwest = { version = "0.13", default-features = false, features = [
    "cookies",
    "json",
] }
rtp-rs = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.6"
tokio = { version = "1", features = ["macros"] }
tokio-util = { version = "0.7.18", features = ["codec", "net"] }
toml = "1.1"
xml-rs = "1.0.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
